<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.calculationcompetition.view.TitleFragment"
        android:label="@string/nav_title_fragment"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.example.calculationcompetition.view.QuestionFragment"
        android:label="@string/nav_question_fragment"
        tools:layout="@layout/fragment_question">
        <action
            android:id="@+id/action_questionFragment_to_successFragment"
            app:destination="@id/successFragment" />
        <action
            android:id="@+id/action_questionFragment_to_failFragment"
            app:destination="@id/failFragment" />
    </fragment>
    <fragment
        android:id="@+id/successFragment"
        android:name="com.example.calculationcompetition.view.SuccessFragment"
        android:label="@string/nav_success_fragment"
        tools:layout="@layout/fragment_success" >
        <action
            android:id="@+id/action_successFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/failFragment"
        android:name="com.example.calculationcompetition.view.FailFragment"
        android:label="@string/nav_fail_fragment"
        tools:layout="@layout/fragment_fail" >
        <action
            android:id="@+id/action_failFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
</navigation>